--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -206,6 +206,8 @@
     <Content Include="Content\HinhAnh\GiaoDien\user.png" />
     <Content Include="Content\HinhAnh\GiaoDien\yola-english-high-resolution-logo.png" />
     <Content Include="Content\HinhAnh\GiaoDien\youtube.jpg" />
+    <Content Include="Content\HinhAnh\GiaoDien\email-icon.jpg" />
+    <Content Include="Content\HinhAnh\GiaoDien\phone-icon.jpg" />
     <Content Include="Content\HinhAnh\KhoaHoc\GiaoTiepCoBan.jpg" />
     <Content Include="Content\HinhAnh\KhoaHoc\GiaoTiepNangCao.jpg" />
     <Content Include="Content\HinhAnh\KhoaHoc\GiaoTiepQuocTe.jpg" />
