--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -217,6 +217,7 @@
     <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_3.png" />
     <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_4.png" />
     <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_5.png" />
+    <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_default.jpg" />
     <Content Include="Content\HinhAnh\KhoaHoc\LuyenThi_IELTS.jpg" />
     <Content Include="Content\HinhAnh\KhoaHoc\LuyenThi_Toeic.jpg" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
