--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
@@ -13,6 +13,8 @@
       providerName="System.Data.SqlClient" />
     <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=PHAMTHUAN\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;Persist Security Info=True;User ID=sa;Password=123;Encrypt=False"
       providerName="System.Data.SqlClient" />
+    <add name="QL_TrungTamAnhNguConnectionString1" connectionString="Data Source=THAIBINH-LAPTOP;Initial Catalog=QL_TrungTamAnhNgu;User ID=sa;Password=sa123"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
