--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -9,10 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-QL_TrungTamAnhNgu-20241115113150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-QL_TrungTamAnhNgu-20241115113150.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=PHAMTHUAN\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;Persist Security Info=True;User ID=sa;Password=123;Encrypt=False"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-QL_TrungTamAnhNgu-20241115113150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-QL_TrungTamAnhNgu-20241115113150.mdf" providerName="System.Data.SqlClient" />
+    <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=PHAMTHUAN\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;Persist Security Info=True;User ID=sa;Password=123;Encrypt=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -24,9 +22,9 @@
   <system.web>
 
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5" >
+    <compilation debug="true" targetFramework="4.5">
       <assemblies>
-        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
     <authentication mode="Forms">
@@ -87,8 +85,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="QL_TrungTamAnhNgu" publicKeyToken="null" culture="neutral"/>
-        <codeBase version="1.0.0.0" href="file:///C:/path/to/your/dll/QL_TrungTamAnhNgu.dll"/>
+        <assemblyIdentity name="QL_TrungTamAnhNgu" publicKeyToken="null" culture="neutral" />
+        <codeBase version="1.0.0.0" href="file:///C:/path/to/your/dll/QL_TrungTamAnhNgu.dll" />
       </dependentAssembly>
     </assemblyBinding>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -106,11 +104,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" />
-        <bindingRedirect oldVersion="1.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
