--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/packages.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="Ghostscript.NET" version="1.2.3.1" targetFramework="net45" />
+  <package id="iTextSharp" version="5.5.10" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
+  <package id="Magick.NET.Core" version="5.2.0" targetFramework="net45" />
+  <package id="Magick.NET-Q8-AnyCPU" version="7.22.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net45" />
@@ -22,5 +26,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net45" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
